STRETCH: 'Create a fixed navigation and add some opacity to the background'

--- a/css/index.css
+++ b/css/index.css
@@ -166,9 +166,13 @@ a {
   margin: 0 auto;
 }
 nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 115px;
   margin: 0 auto;
   padding: 15px 0;
-  background-color: #F6F6F6;
+  background-color: rgba(246, 246, 246, 0.85);
   border-bottom: 2px solid #F1F1F1;
   display: flex;
   flex-direction: column;
@@ -203,6 +207,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  padding-top: 125px;
 }
 .home .intro h2 {
   padding: 15px;
