--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,8 @@
 
 .home {
 
+  padding-top: @nav-height + 10%;
+
   .intro {
 
     h2 {
